# tsisa-lab-02

./: CMakeLists.txt  README.md
include/: random_search.hpp
search_results/: multimodal_results.txt  unimodal_results.txt
sources/: main.cpp  random_search.cpp
